Fix log folder access error

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -81,7 +81,7 @@ windowrule = float, ^(org.kde.polkit-kde-authentication-agent-1)$
 bind = SUPER, Return, exec, ghostty
 bind = SUPER, Q, killactive, 
 bind = SUPER, M, exit, 
-bind = SUPER, E, exec, thunar
+bind = SUPER, E, exec, echo "File manager not configured yet"
 bind = SUPER, V, togglefloating, 
 bind = SUPER, R, exec, echo "Application launcher not configured yet"
 bind = SUPER, P, pseudo, # dwindle
