Auto launch hyprland & add sample qshell window

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,6 +1,10 @@
 # Hyprland Configuration
 # https://wiki.hyprland.org/Configuring/
 
+# Programs
+$terminal = ghostty
+$menu = rofi -show drun
+
 # Monitor configuration
 monitor=,preferred,auto,1
 
