Add quickshell dependencies and add auto-start

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -5,6 +5,9 @@
 $terminal = ghostty
 $menu = rofi -show drun
 
+# Autostart
+exec-once = quickshell
+
 # Monitor configuration
 monitor=,preferred,auto,1
 
