Add shell tools and configurations

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -45,11 +45,11 @@ dwindle {
 # Keybindings
 $mainMod = SUPER
 
-bind = $mainMod, Return, exec, ghostty
+bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, D, exec, rofi -show drun
+bind = $mainMod, D, exec, $menu
 bind = $mainMod, F, fullscreen,
 
 # Move focus
