--- a/config/hypr/conf.d/keybinds.conf
+++ b/config/hypr/conf.d/keybinds.conf
@@ -2,12 +2,12 @@
 # https://wiki.hyprland.org/Configuring/Binds/
 
 # Application launchers
-bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, SPACE, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
 
 # Window management
-bind = $mainMod, C, killactive,
+bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo,
