Update hyprland config

--- a/config/hypr/conf.d/monitors.conf
+++ b/config/hypr/conf.d/monitors.conf
@@ -1,4 +1,5 @@
 # Monitor Configuration
 # https://wiki.hyprland.org/Configuring/Monitors/
 
-monitor = , preferred, auto, auto
+# Default: auto-detect resolution, position, and scale
+monitor = , preferred, auto, 1
