--- a/config/hypr/conf.d/rules.conf
+++ b/config/hypr/conf.d/rules.conf
@@ -2,20 +2,7 @@
 # https://wiki.hyprland.org/Configuring/Window-Rules/
 
 # Suppress maximize requests from all apps
-windowrule {
-    name = suppress-maximize-events
-    match:class = .*
-    suppress_event = maximize
-}
+windowrulev2 = suppressevent maximize, class:.*
 
-# Fix XWayland dragging issues
-windowrule {
-    name = fix-xwayland-drags
-    match:class = ^$
-    match:title = ^$
-    match:xwayland = true
-    match:float = true
-    match:fullscreen = false
-    match:pin = false
-    no_focus = true
-}
+# Fix XWayland apps not receiving focus
+windowrulev2 = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
