--- a/config/hypr/conf.d/autostart.conf
+++ b/config/hypr/conf.d/autostart.conf
@@ -1,7 +1,7 @@
 # Autostart Configuration
 # https://wiki.hyprland.org/Configuring/Keywords/#executing
 
-# Add applications to start on login:
+# Startup applications (uncomment as needed)
 # exec-once = waybar
 # exec-once = hyprpaper
 # exec-once = nm-applet
