--- a/config/hypr/conf.d/input.conf
+++ b/config/hypr/conf.d/input.conf
@@ -17,12 +17,7 @@ input {
 }
 
 # Gestures
-# https://wiki.hyprland.org/Configuring/Gestures
-gesture = 3, horizontal, workspace
-
-# Per-device config
-# https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+# https://wiki.hyprland.org/Configuring/Variables/#gestures
+gestures {
+    workspace_swipe = false
 }
