--- a/config/hypr/conf.d/keybinds.conf
+++ b/config/hypr/conf.d/keybinds.conf
@@ -1,19 +1,18 @@
-# Keybindings Configuration
+# Keybinding Configuration
 # https://wiki.hyprland.org/Configuring/Binds/
 
 # Application launchers
 bind = $mainMod, SPACE, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, exec, $menu
 
 # Window management
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod, J, togglesplit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo,
-bind = $mainMod, J, togglesplit,
 
-# Focus movement
+# Focus management
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
@@ -31,7 +30,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move window to workspace
+# Window workspace switching
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -43,7 +42,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Special workspace (scratchpad)
+# Scratchpad workspace
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
@@ -62,6 +61,7 @@ bindel = , XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = , XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
 # Player controls (requires playerctl)
+# TODO: Add playerctl support or remove
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
