--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,7 +1,7 @@
 # Hyprland Configuration
 # https://wiki.hyprland.org/Configuring/
 
-# Programs
+# Default applications
 $terminal = ghostty
 $fileManager = dolphin
 $menu = rofi -show drun
@@ -9,10 +9,15 @@ $menu = rofi -show drun
 # Modifier key
 $mainMod = SUPER
 
-# Source config files
+# Source modular config files
+source = ~/.config/hypr/conf.d/environment.conf
 source = ~/.config/hypr/conf.d/monitors.conf
 source = ~/.config/hypr/conf.d/input.conf
-source = ~/.config/hypr/conf.d/appearance.conf
+source = ~/.config/hypr/conf.d/general.conf
+source = ~/.config/hypr/conf.d/decoration.conf
+source = ~/.config/hypr/conf.d/animations.conf
+source = ~/.config/hypr/conf.d/layouts.conf
+source = ~/.config/hypr/conf.d/misc.conf
 source = ~/.config/hypr/conf.d/keybinds.conf
 source = ~/.config/hypr/conf.d/rules.conf
 source = ~/.config/hypr/conf.d/autostart.conf
